# intive-ua-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  guardian.service
doc/: Concept.drawio
src/: bot.rs  config.rs  db.rs  http_client.rs  lib.rs  main.rs  user_data.rs
src/bot/: fsm.rs  teladler.rs  telandler.rs  telapi.rs  telecom.rs  telorker.rs  utils.rs
src/bot/telecom/: cmd_help.rs  cmd_test.rs
src/db/: example.rs  report.rs  survey_table.rs  user_table.rs  utils.rs
