[package]
name = "guardian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = { version = "0.20.0", default-features = false, features = ["telegram-trait"] }
isahc = "1.7.2"
log = "0.4.17"
once_cell = "1.15.0"
pretty_env_logger = "0.4.0"
rayon = "1.5.3"
serde = "1.0.147"
serde_json = "1.0.87"
strum = "0.24.1"
strum_macros = "0.24.3"
