[package]
name = "guardian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
frankenstein = { version = "0.20.0", default-features = false, features = ["telegram-trait"] }
isahc = "1.7.2"
log = "0.4.17"
once_cell = "1.15.0"
pretty_env_logger = "0.4.0"
prettytable-rs = "0.9.0"
rayon = "1.5.3"
rusqlite = "0.28.0"
serde = "1.0.147"
serde_json = "1.0.87"
# sqlite = "0.27.3"
strum = "0.24.1"
strum_macros = "0.24.3"
timer = "0.2.0"
typed-builder = "0.11.0"



# [profile.release]
# opt-level = 'z'     # Optimize for size.
# lto = true          # Enable Link Time Optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*